--- a/frontend/src/components/LoginBox/styles.module.scss
+++ b/frontend/src/components/LoginBox/styles.module.scss
@@ -2,13 +2,19 @@
   height: 100vh;
   width: 100%;
   background: #17171a url("../../assets/banner-girl.png") no-repeat center -25%;
-
   padding: 95% 80px 0;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+
+  .sealIcon {
+    position: absolute;
+    top: 10%;
+    left: 25%;
+  }
 
   strong {
     font-size: 2em;
