--- a/frontend/src/components/SendMessageForm/styles.module.scss
+++ b/frontend/src/components/SendMessageForm/styles.module.scss
@@ -8,6 +8,12 @@
   text-align: center;
   position: relative;
 
+  .sealIcon {
+    position: absolute;
+    top: -7%;
+    right: 10%;
+  }
+
   .signOutButton {
     background: transparent;
     border: 0;
@@ -63,7 +69,7 @@
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    margin-top: 48px;
+    margin-top: 38px;
     background: #202024;
 
     label {
@@ -79,7 +85,7 @@
       border: 0;
       padding: 24px;
       resize: none;
-      height: 160px;
+      height: 125px;
       color: #e1e1e6;
       font-size: 16px;
       line-height: 24px;
